--- a/svg-fun/package.json
+++ b/svg-fun/package.json
@@ -9,9 +9,11 @@
     "animejs": "^3.2.0",
     "antd": "^4.1.2",
     "gsap": "^3.2.6",
+    "highlight.js": "^10.0.3",
     "polished": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-highlight.js": "^1.0.7",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
