Added background for calendar. Added year drop down for calendar. Good start.

--- a/svg-fun/package.json
+++ b/svg-fun/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.1.2",
     "gsap": "^3.2.6",
     "highlight.js": "^10.0.3",
+    "moment": "^2.26.0",
     "polished": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
