--- a/svg-fun/package.json
+++ b/svg-fun/package.json
@@ -2,6 +2,7 @@
   "name": "svg-fun",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://jeremiahtenbrink.github.io/SvgTalk",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -10,6 +11,7 @@
     "antd": "^4.1.2",
     "gsap": "^3.2.6",
     "highlight.js": "^10.0.3",
+    "history": "^4.10.1",
     "moment": "^2.26.0",
     "polished": "^3.5.1",
     "react": "^16.13.1",
@@ -24,6 +26,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
